test/chainsaw/authpolicy/baseline_auth_resource_assertion/authpolicy-baseline-auth-and-auth-rules.yaml
apiVersion: ztoperator.kartverket.no/v1alpha1
kind: AuthPolicy
metadata:
  name: auth-policy-baseline-auth-and-auth-rules
spec:
  enabled: true
  baselineAuth:
    claims:
      - claim: role
        values:
          - baseline_role
  authRules:
    - paths:
      - /user*
      when:
      - claim: role
        values:
          - path_specific_role
  allowedAudiences:
    - value: entraid_server
  wellKnownURI: http://mock-oauth2.auth:8080/entraid/.well-known/openid-configuration
  selector:
    matchLabels:
      app: application
