test/chainsaw/authpolicy/baseline_auth_resource_assertion/authpolicy-baseline-auth-and-ignore-auth-rules.yaml
apiVersion: ztoperator.kartverket.no/v1alpha1
kind: AuthPolicy
metadata:
  name: auth-policy-baseline-auth-and-ignore-auth-rules
spec:
  enabled: true
  ignoreAuthRules:
    - paths:
        - /public*
  baselineAuth:
    claims:
      - claim: role
        values:
          - baseline_role
  audience:
    - entraid_server
  wellKnownURI: http://mock-oauth2.auth:8080/entraid/.well-known/openid-configuration
  selector:
    matchLabels:
      app: application
