test/chainsaw/authpolicy/baseline_auth_resource_assertion/authpolicy-with-all-rules.yaml
apiVersion: ztoperator.kartverket.no/v1alpha1
kind: AuthPolicy
metadata:
  name: auth-policy-with-all-rules
spec:
  enabled: true
  ignoreAuthRules:
    - paths:
        - /public*
      methods:
        - GET
  baselineAuth:
    claims:
      - claim: role
        values:
          - entraid_role
  authRules:
    - paths:
        - /api*
      methods:
        - POST
      when:
        - claim: role
          values:
            - entra_user_role
    - paths:
        - /unreachable*
      when:
        - claim: role
          values:
            - entra_user_role
        - claim: sub
          values:
            - entraid_client
  allowedAudiences:
    - value: entraid_server
  wellKnownURI: http://mock-oauth2.auth:8080/entraid/.well-known/openid-configuration
  selector:
    matchLabels:
      app: application
