test/chainsaw/authpolicy/baseline_auth_resource_assertion/authpolicy-only-baseline-auth-assert.yaml
# AuthorizationPolicy (require-auth)
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: auth-policy-only-baseline-auth-require-auth
  labels:
    ztoperator.kartverket.no/controller: authpolicy
    app.kubernetes.io/managed-by: ztoperator
spec:
  rules:
    - to:
        - operation:
            paths:
              - '*'
      when:
        - key: request.auth.claims[iss]
          values:
            - http://mock-oauth2.auth:8080/entraid
        - key: request.auth.claims[aud]
          values:
            - entraid_server
        - key: request.auth.claims[role]
          values:
            - role1
        - key: request.auth.claims[role]
          values:
            - role2
  selector:
    matchLabels:
      app: application
---
