test/chainsaw/authpolicy/baseline_auth_resource_assertion/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: baseline-auth
spec:
  skip: false
  concurrent: true
  skipDelete: false
  namespaceTemplate:
    metadata:
      labels:
        istio-injection: enabled
  steps:
    - try:
        - create:
            file: ../../../resources/skiperator/application.yaml
        - apply:
            file: ../../../resources/ingress/wildcard-ingress.yaml
        - create:
            file: authpolicy-baseline-auth-and-auth-rules.yaml
        - assert:
            file: authpolicy-baseline-auth-and-auth-rules-assert.yaml
        - create:
            file: authpolicy-baseline-auth-and-ignore-auth-rules.yaml
        - assert:
            file: authpolicy-baseline-auth-and-ignore-auth-rules-assert.yaml
        - create:
            file: authpolicy-only-baseline-auth.yaml
        - assert:
            file: authpolicy-only-baseline-auth-assert.yaml
        - create:
            file: authpolicy-with-all-rules.yaml
        - assert:
            file: authpolicy-with-all-rules-assert.yaml
